fix removeMail bug. fix css layout bugs

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
   background: url('https://images.unsplash.com/photo-1511884642898-4c92249e20b6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dda4800cce17d4fd81e1f7951aa51bd8&auto=format&fit=crop&w=1350&q=80');
   background-size: cover;
   height: 100vh;
@@ -16,6 +18,7 @@
   background: #2b2f3d;
   color: #f7f7e2;
   margin-top: 0;
+  height: 10%;
 }
 
 .header-bar h1 {
@@ -26,6 +29,8 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  height: 85%;
+  width: 100%;
 }
 
 .yellow {
@@ -39,10 +44,11 @@
 
 /*LEFT PANEL*/
 .leftPanel {
-  background: rgba(255,255,255,.8);
+  background: rgba(255,255,255,.7);
   width: 50%;
-  height: 85vh;
+  height: 100%;
   overflow-y: scroll;
+  border: 1px solid grey;
 }
 
 .mailListBar {
@@ -111,8 +117,10 @@
 /*RIGHT PANEL*/
 .rightPanel {
   width: 50%;
-  background: rgba(255,255,255,.8);
+  height: 100%;
+  background: rgba(255,255,255,.6);
   overflow-y: scroll;
+  border: 1px solid grey;
 }
 
 .selected-container {
@@ -146,6 +154,7 @@
 
 .footer-text {
   width: 100%;
+  height: 5%;
   display: flex;
   margin-top: 20px;
   justify-content: center;
